--- a/HealthAppDemo/Main/Base.lproj/Main.storyboard
+++ b/HealthAppDemo/Main/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mtn-dK-eZC">
                                         <rect key="frame" x="0.0" y="50" width="375" height="2"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.21999617963454773" green="0.31491254490735621" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="NP2-fH-CMc"/>
                                         </constraints>
@@ -135,7 +135,7 @@
                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="highlightedColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rYz-Xs-2JR">
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rYz-Xs-2JR">
                                                     <rect key="frame" x="290" y="29.5" width="50" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="0iu-jb-QAQ"/>
@@ -180,15 +180,94 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="65F-Of-QKq"/>
                     </view>
+                    <navigationItem key="navigationItem" id="23v-tn-Bbf"/>
                     <connections>
                         <outlet property="actionStatusButton" destination="57N-rw-qlr" id="E4C-Sd-s5l"/>
                         <outlet property="statusLabel" destination="4mn-Oq-Tde" id="8kf-wR-jlR"/>
                         <outlet property="tableView" destination="dTN-fZ-zNA" id="bZ8-qh-aKK"/>
+                        <outlet property="tableViewTopConstraint" destination="uZ3-ei-Jt2" id="3cH-2E-rSB"/>
+                        <outlet property="topParentStackView" destination="BYB-sN-syg" id="kRM-zI-7HI"/>
+                        <outlet property="topParentView" destination="d5p-0c-nJm" id="Kjk-V2-NYb"/>
+                        <segue destination="zaO-OO-8g3" kind="show" identifier="showRecordDetails" id="ELf-GD-Gv3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wwf-7e-i83" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-42.399999999999999" y="-260.41979010494754"/>
+        </scene>
+        <!--Record Details-->
+        <scene sceneID="U1d-5z-xi9">
+            <objects>
+                <viewController title="Record Details" id="zaO-OO-8g3" customClass="FeatureDetailsViewController" customModule="HealthAppDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pMA-FJ-1AT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tPo-at-5sY">
+                                <rect key="frame" x="10" y="116" width="355" height="551"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="XMq-1b-Un8">
+                                        <rect key="frame" x="0.0" y="28" width="355" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XMq-1b-Un8" id="viu-zY-Yw8">
+                                            <rect key="frame" x="0.0" y="0.0" width="355" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Q93-Ec-M9V">
+                                                    <rect key="frame" x="35" y="21" width="305" height="58"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ze5-H8-LOx">
+                                                            <rect key="frame" x="0.0" y="0.0" width="152.5" height="58"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tgm-pg-WVd">
+                                                            <rect key="frame" x="160.5" y="0.0" width="144.5" height="58"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="Tgm-pg-WVd" firstAttribute="centerY" secondItem="Q93-Ec-M9V" secondAttribute="centerY" id="Bnt-GW-NCQ"/>
+                                                        <constraint firstItem="Ze5-H8-LOx" firstAttribute="centerY" secondItem="Q93-Ec-M9V" secondAttribute="centerY" id="q94-je-kYe"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Q93-Ec-M9V" secondAttribute="trailing" constant="20" id="SD4-9I-IfK"/>
+                                                <constraint firstItem="Q93-Ec-M9V" firstAttribute="leading" secondItem="viu-zY-Yw8" secondAttribute="leadingMargin" constant="20" id="fap-Cl-jVF"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Q93-Ec-M9V" secondAttribute="bottom" constant="10" id="jB3-29-e5R"/>
+                                                <constraint firstItem="Q93-Ec-M9V" firstAttribute="top" secondItem="viu-zY-Yw8" secondAttribute="topMargin" constant="10" id="zoz-8E-1Yt"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="zaO-OO-8g3" id="Veg-67-NcG"/>
+                                    <outlet property="delegate" destination="zaO-OO-8g3" id="jz6-aX-cZt"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tPo-at-5sY" firstAttribute="leading" secondItem="6bc-VB-Vev" secondAttribute="leading" constant="10" id="ETF-5T-P8H"/>
+                            <constraint firstItem="tPo-at-5sY" firstAttribute="top" secondItem="6bc-VB-Vev" secondAttribute="top" id="V0g-TF-T8f"/>
+                            <constraint firstItem="6bc-VB-Vev" firstAttribute="bottom" secondItem="tPo-at-5sY" secondAttribute="bottom" id="iET-Pa-ew8"/>
+                            <constraint firstItem="6bc-VB-Vev" firstAttribute="trailing" secondItem="tPo-at-5sY" secondAttribute="trailing" constant="10" id="ryc-BN-5a6"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6bc-VB-Vev"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="tPo-at-5sY" id="1Cs-S8-obN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d9t-wU-ed8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="-260"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1Dj-Gh-WQ8">
